Dev 09: Sign Out User

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,3 +9,7 @@
 .primary-button {
   @apply text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800;
 }
+
+.navbar-dropdown-link {
+  @apply text-gray-700 block px-4 py-2 text-sm hover:bg-gray-50 rounded-md;
+}
